    other value.

  - Supervisord now emits TICK events, which happen every N seconds.
    Three types of TICK events are available: TICK_5 (every five
    seconds), TICK_60 (every minute), TICK_3600 (every hour).  Event
    listeners may subscribe to one of these types of events to perform
    every-so-often processing.  TICK events are subtypes of the EVENT
    type.

3.0a3

  - Supervisorctl now reports a better error message when the main
    supervisor XML-RPC namespace is not registered.  Thanks to
    Mike Orr for reporting this. (Mike Naberezny)

  - Create 'scripts' directory within supervisor package, move
    'pidproxy.py' there, and place sample event listener and comm
    event programs within the directory.

  - When an event notification is buffered (either because a listener
    rejected it or because all listeners were busy when we attempted
    to send it originally), we now rebuffer it in a way that will
    result in it being retried earlier than it used to be.

  - When a listener process exits (unexpectedly) before transitioning
    from the BUSY state, rebuffer the event that was being processed.

  - supervisorctl 'tail' command now accepts a trailing specifier:
    'stderr' or 'stdout', which respectively, allow a user to tail the
    stderr or stdout of the named process.  When this specifier is not
    provided, tail defaults to stdout.

  - supervisor 'clear' command now clears both stderr and stdout logs
    for the given process.

  - When a process encounters a spawn error as a result of a failed
    execve or when it cannot setuid to a given uid, it now puts this
    info into the process' stderr log rather than its stdout log.

  - The event listener protocol header now contains the 'server'
    identifier, the 'pool' that the event emanated from, and the
    'poolserial' as well as the values it previously contained
    (version, event name, serial, and length).  The server identifier